# oge

./: .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  README.md
example/: CMakeLists.txt  main.c
example/shaders/glsl/: default.vert
runtime/: CMakeLists.txt  README.md
runtime/include/oge/: defines.h  entry.h  internal.h  oge.h
runtime/include/oge/containers/: darray.h
runtime/include/oge/core/: application.h  assertion.h  engine.h  events.h  input.h  logging.h  memory.h  platform.h
runtime/include/oge/renderer/: debug.h  directx.h  metal.h  querries.h  renderer-state.h  renderer-types.h  renderer.h  vulkan.h
runtime/include/oge/utils/: clock.h
runtime/lib/: CMakeLists.txt
runtime/src/containers/: darray.c
runtime/src/core/: engine.c  events.c  input.c  logging.c  memory.c  platform.c
runtime/src/oge/: init.c
runtime/src/platform/: macos.m  platform_macos.m
runtime/src/renderer/: debug.c  debug.h  directx.c  metal.c  querries.c  querries.h  querries.inl  renderer.c  types.inl  vulkan.c
runtime/src/utils/: clock.c
