cmake_minimum_required(VERSION 3.16)

set(OGE_VERSION_MAJOR 0)
set(OGE_VERSION_MINOR 0)
set(OGE_VERSION_PATCH 1)
project(oge
  VERSION ${OGE_VERSION_MAJOR}.${OGE_VERSION_MINOR}.${OGE_VERSION_PATCH}
  LANGUAGES C
)

set(CMAKE_C_STANDARD 17)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/lib)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

add_subdirectory(runtime)
add_subdirectory(example)
